k8s_scaffold/apps/ingress-controller.yaml
# Based on https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.0/deploy/static/provider/baremetal/deploy.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx

---

# Source: ingress-nginx/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.10
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-admission
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller

---

# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.10
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: ingress-nginx
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
# --- Kubernetes-Dashboard
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      appProtocol: http
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      appProtocol: https
      nodePort: 30443
# --- ChirpStack-v3
    - name: proxied-udp-1700
      port: 1700
      targetPort: 1700
      protocol: UDP
      nodePort: 30700
    - name: proxied-tcp-1888
      port: 1888
      targetPort: 1888
      protocol: TCP
      nodePort: 30888
    - name: proxied-tcp-5437
      port: 5437
      targetPort: 5437
      protocol: TCP
      nodePort: 30437
    - name: proxied-tcp-5438
      port: 5438
      targetPort: 5438
      protocol: TCP
      nodePort: 30438
    - name: proxied-tcp-6384
      port: 6384
      targetPort: 6384
      protocol: TCP
      nodePort: 30384
    - name: proxied-tcp-8000
      port: 8000
      targetPort: 8000
      protocol: TCP
      nodePort: 31000
    - name: proxied-tcp-8001
      port: 8001
      targetPort: 8001
      protocol: TCP
      nodePort: 31001
    - name: proxied-tcp-8003
      port: 8003
      targetPort: 8003
      protocol: TCP
      nodePort: 31003
    - name: proxied-tcp-8080
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 31080
    - name: proxied-tcp-8101
      port: 8101
      targetPort: 8101
      protocol: TCP
      nodePort: 31101
# --- ChirpStack-v4
    - name: proxied-udp-1710
      port: 1710
      targetPort: 1710
      protocol: UDP
      nodePort: 30710
    # - name: proxied-tcp-1893
    #   port: 1893
    #   targetPort: 1893
    #   protocol: TCP
    #   nodePort: 30893
    - name: proxied-tcp-8883
      port: 8883
      targetPort: 8883
      protocol: TCP
      nodePort: 30883
    - name: proxied-tcp-5442
      port: 5442
      targetPort: 5442
      protocol: TCP
      nodePort: 30442
    - name: proxied-tcp-6389
      port: 6389
      targetPort: 6389
      protocol: TCP
      nodePort: 30389
    - name: proxied-tcp-8090
      port: 8090
      targetPort: 8090
      protocol: TCP
      nodePort: 31090
    - name: proxied-tcp-8100
      port: 8100
      targetPort: 8100
      protocol: TCP
      nodePort: 31100
# --- Jenkins
    - name: proxied-tcp-8088
      port: 8088
      targetPort: 8088
      protocol: TCP
      nodePort: 30088
    - name: proxied-tcp-50000
      port: 50000
      targetPort: 50000
      protocol: TCP
      nodePort: 30500
# --- Node-RED
    - name: proxied-tcp-1885
      port: 1885
      targetPort: 1885
      protocol: TCP
      nodePort: 30885
# --- Grafana
    - name: proxied-tcp-3005
      port: 3005
      targetPort: 3005
      protocol: TCP
      nodePort: 30005
# --- MongoDB
    - name: proxied-tcp-27017
      port: 27017
      targetPort: 27017
      protocol: TCP
      nodePort: 32017
# --- Home Assistant
    - name: proxied-tcp-8123
      port: 8123
      targetPort: 8123
      protocol: TCP
      nodePort: 30123
# --- SpringBoot Apps (platform arm64)
    - name: proxied-tcp-8081
      port: 8081
      targetPort: 8081
      protocol: TCP
      nodePort: 32081
# --- SpringBoot Apps (platform arm64) CSLab-CardsControl - Organizar para inclusão dos projetos: CSLab-WEB e CSLab-BackOffice.
    - name: proxied-tcp-5445
      port: 5445
      targetPort: 5445
      protocol: TCP
      nodePort: 30445
    - name: proxied-tcp-8083
      port: 8083
      targetPort: 8083
      protocol: TCP
      nodePort: 30083
# --- SpringBoot Apps (platform arm64) DAG-StockControl
    - name: proxied-tcp-5446
      port: 5446
      targetPort: 5446
      protocol: TCP
      nodePort: 30446
    - name: proxied-tcp-8084
      port: 8084
      targetPort: 8084
      protocol: TCP
      nodePort: 30084
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller

# ---

# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: tcp-services
#   namespace: ingress-nginx
# data:

#   # # --- ChirpStack-v3
#   # 1888: "chirpstack-v3/chirpstack-v3-mosquitto-service:1888"
#   # 5437: "chirpstack-v3/chirpstack-v3-ns-postgresql-service:5437"
#   # 5438: "chirpstack-v3/chirpstack-v3-as-postgresql-service:5438"
#   # 6384: "chirpstack-v3/chirpstack-v3-redis-service:6384"
#   # 8000: "chirpstack-v3/chirpstack-v3-network-server-service:8000"
#   # 8001: "chirpstack-v3/chirpstack-v3-application-server-service:8001"
#   # 8003: "chirpstack-v3/chirpstack-v3-application-server-service:8003"
#   # 8080: "chirpstack-v3/chirpstack-v3-application-server-service:8080"
#   # 8101: "chirpstack-v3/chirpstack-v3-application-server-service:8101"

#   # # --- ChirpStack-v4
#   # 1893: "chirpstack-v4/chirpstack-v4-mosquitto-service:1893"
    # 8883: "chirpstack-v4/chirpstack-v4-mosquitto-service:8883"
#   # 5442: "chirpstack-v4/chirpstack-v4-postgresql-service:5442"
#   # 6389: "chirpstack-v4/chirpstack-v4-redis-service:6389"
#   # 8090: "chirpstack-v4/chirpstack-v4-service:8090"
#   # 8100: "chirpstack-v4/chirpstack-v4-rest-api-service:8100"

#   # # --- Jenkins
#   # 8088: "jenkins/jenkins-service:8088"
#   # 50000: "jenkins/jenkins-service:50000"

#   # # --- Node-RED
#   # 1885: "adailsilva-apps/node-red-service:1885"

#   # # --- Grafana
#   # 3005: "adailsilva-apps/grafana-service:3005"

#   # # --- MongoDB
#   # 27017: "adailsilva-apps/mongo-service:27017"

#   # # --- Home Assistant
#   # 8123: "home-assistant/home-assistant-service:8123"

#   # # --- SpringBoot Apps (platform arm64)
#   # 8081: "adailsilva-apps/spring-boot-app-arm64-service:8081"

#   # # --- SpringBoot Apps (platform arm64) CSLab-CardsControl
#   # 5445: "cardscontrol/cardscontrol-postgresql-service:5445"
#   # 8083: "cardscontrol/cardscontrol-backend-service:8083"

#   # # --- SpringBoot Apps (platform arm64) DAG-StockControl
#   # 5446: "stockcontrol/stockcontrol-postgresql-service:5446"
#   # 8084: "stockcontrol/stockcontrol-backend-service:8084"

---

# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.10
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.1.0@sha256:f766669fdcf3dc26347ed273a55e754b427eb4411ee075a53f30718b4499076a
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller

            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller

            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
            - --udp-services-configmap=$(POD_NAMESPACE)/udp-services

            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission

---

# Source: ingress-nginx/templates/controller-ingressclass.yaml
# We don't support namespaced ingressClass yet
# So a ClusterRole and a ClusterRoleBinding is required
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.10
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: nginx
  namespace: ingress-nginx
spec:
  controller: k8s.io/ingress-nginx

---

# Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.0.10
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: ingress-nginx-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        namespace: ingress-nginx
        name: ingress-nginx-controller-admission
        path: /networking/v1/ingresses
